--- a/readme
+++ b/readme
@@ -4,8 +4,8 @@
 #!/bin/bash
 yum update -y
 yum install git -y
-git clone https://github.com/zifung/aws-live.git
-cd aws-live
+git clone https://github.com/zifung/assg-live.git
+cd assg-live
 pip3 install flask
 pip3 install pymysql
 pip3 install boto3
